# warehouse-robot-slam

./: .gitignore  README.md  tree_repo.txt
.devcontainer/: Dockerfile  devcontainer.json
src/LIO-SAM-ros2/: CMakeLists.txt  Readme.md  package.xml
src/LIO-SAM-ros2/config/: params.yaml
src/LIO-SAM-ros2/src/: imuPreintegration.cpp
src/custom_robot_description/: CMakeLists.txt  package.xml
src/custom_robot_description/launch/: custom_robot_sim.launch.py  lio_sam_custom.launch.py
src/custom_robot_description/models/warehouse_floor/: model.config  model.sdf
src/custom_robot_description/models/warehouse_floor/materials/scripts/: warehouse_floor.material
src/custom_robot_description/urdf/: custom_robot.urdf.xacro
src/custom_robot_description/urdf/sensors/: imu.urdf.xacro  velodyne.urdf.xacro
src/custom_robot_description/worlds/: custom_warehouse.world  warehouse.world
src/husky_minimal/: CMakeLists.txt  manual.txt  package.xml  tree_husky.txt
src/husky_minimal/config/: husky_controllers.yaml  lio_sam_params.yaml
src/husky_minimal/launch/: gazebo_husky.launch.py  husky_lio_sam_full.launch.py  joystick.launch.py  lio_sam_husky.launch.py  rviz_husky.launch.py  teleop.launch.py
src/husky_minimal/rviz/: husky.rviz
src/husky_minimal/urdf/: husky_ros2.urdf.xacro  pacs.urdf.xacro  wheel.urdf.xacro
src/robot_gazebo/launch/: robot_sim.launch.py
src/robot_gazebo/models/robot/: model.config
src/robot_gazebo/models/robot/meshes/DAE/base/: base_link_ref.dae
src/robot_gazebo/worlds/: lio_world.model
